# FlowIO

./: .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_test.txt  run_tests.py  setup.py
.github/workflows/: test_base.yml  test_flowkit.yml  test_flowkit_develop.yml  test_flowkit_master.yml  tests_develop.yml  tests_master.yml
data/fcs_files/: 3FITC_4PE_004.fcs  G11.fcs  variable_int_example.fcs
data/truth/: B01 KC-A-W---91-US_preprocessed_events.npy  data1_original_events.npy
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/examples/: compensate_example.py  fabricate_fcs_file.py  read_fcs_file.py
docs/notebooks/: flowio_tutorial.ipynb
examples/: compensate_example.py  fabricate_fcs_file.py  print_channels.py  read_fcs_file.py  reshape_events.py
examples/fcs_files/: B01 KC-A-W---91-US.fcs
examples/truth/: data1_preprocessed.npy
flowio/: __init__.py  _version.py  create_fcs.py  exceptions.py  flowdata.py  utility.py  utils.py
flowio/tests/: __init__.py  fcs_write_tests.py  flowdata_lmd_tests.py  flowdata_tests.py  read_multiple_datasets_tests.py
src/flowio/: __init__.py  _version.py  create_fcs.py  exceptions.py  fcs_keywords.py  flowdata.py  utils.py
src/flowio/tests/: flowdata_lmd_tests.py
tests/: __init__.py  fcs_write_tests.py  flowdata_lmd_tests.py  read_multiple_datasets_tests.py  test_fcs_write.py  test_flowdata.py  test_flowdata_lmd.py  test_read_multiple_datasets.py
unit_test/: test_flowdata.py  test_flowdata_lmd.py  unit_tests.py
